--- a/Chapter_8_Reading_and_Writing_Files_.ipynb
+++ b/Chapter_8_Reading_and_Writing_Files_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Chapter 8: Reading and Writing Files .ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOCBLBmLNMCpJE2cFo5MYdL",
+      "authorship_tag": "ABX9TyM/Qjk08ozejA/6g3PqBogl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -901,9 +901,125 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "53A2tCKguHVf"
+      },
+      "source": [
+        "## Opening Files with the `open()` Function\n",
+        "To open a file with the `open()` function, you pass it a string path indicating\n",
+        "the file you want to open; it can be either an absolute or relative path. The\n",
+        "open() function returns a File object.\n",
+        "Try it by creating a text file named kolkata.txt using Notepad or TextEdit.\n",
+        "Type **Hello Kolkata!** as the content of this text file and save it in your user\n",
+        "home folder. Then, if you’re using Windows, enter the following into the\n",
+        "interactive shell:"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "022uVYPks1uA"
+      },
+      "source": [
+        "path = '/content/myFiles/data/kolkata.txt'\n",
+        "kolkata = open(path,'r')"
+      ],
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y_gk_yyvuspD"
+      },
+      "source": [
+        "Both these commands will open the file in `“reading plaintext”` mode,\n",
+        "or read mode for short. When a file is opened in read mode, Python lets you\n",
+        "only read data from the file; you can’t write or modify it in any way. Read\n",
+        "mode is the default mode for files you open in Python. But if you don’t want\n",
+        "to rely on Python’s defaults, you can explicitly specify the mode by passing\n",
+        "the string value `'r'` as a second argument to open(). So `open('/content/myFiles/data/kolkata.txt', 'r')` and `open(/content/myFiles/data/kolkata.txt')` do the same thing.\n",
+        "\n",
+        "The call to open() returns a File object. A File object represents a file on\n",
+        "your computer; it is simply another type of value in Python, much like the\n",
+        "lists and dictionaries you’re already familiar with. In the previous example,\n",
+        "you stored the File object in the variable helloFile. Now, whenever you want\n",
+        "to read from or write to the file, you can do so by calling methods on the\n",
+        "File object in helloFile."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "id": "7a6ArxMzuiP-",
+        "outputId": "db060e8c-7dfa-4f0c-c5c8-136fd49d0263"
+      },
+      "source": [
+        "content = kolkata.read()\n",
+        "content"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "\"Kolkata is the capital of the Indian state of West Bengal. Located on the eastern bank of the Hooghly River, the city is approximately 80 kilometres west of the border with Bangladesh. It is the primary business, commercial, and financial hub of Eastern India and the main port of communication for North-East India. According to the 2011 Indian census, Kolkata is the seventh-most populous city in India, with a population of 4.5 million residents within the city limits, and a population of over 14.1 million residents in the Kolkata Metropolitan Area. It is the third-most populous metropolitan area in India. In 2021, Kolkata metropolitan area crossed 15 million registered voters. The Port of Kolkata is India's oldest operating port and its sole major riverine port. Kolkata is regarded as the cultural capital of India.\""
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NtlMfWVpvZlv"
+      },
+      "source": [
+        "### If you think of the contents of a file as a single large string value, the `read()` method returns the **string** that is stored in the file. Alternatively, you can use the `readlines()` method to get a list of string values from the file, one string for each line of text."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tuSurvxpvRXd",
+        "outputId": "0e614a3a-cd0c-4cba-ddda-1b887f414a18"
+      },
+      "source": [
+        "lines = kolkata.readlines()\n",
+        "lines"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[\"Kolkata is the capital of the Indian state of West Bengal. \\\\\\\\n Located on the eastern bank of the Hooghly River, the city is approximately 80 kilometres west of the border with Bangladesh.\\\\n It is the primary business, commercial, and financial hub of Eastern India and the main port of communication for North-East India. According to the 2011 Indian census, Kolkata is the seventh-most populous city in India, with a population of 4.5 million residents within the city limits, and a population of over 14.1 million residents in the Kolkata Metropolitan Area. It is the third-most populous metropolitan area in India. In 2021, Kolkata metropolitan area crossed 15 million registered voters. The Port of Kolkata is India's oldest operating port and its sole major riverine port. Kolkata is regarded as the cultural capital of India.\"]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cimXJi-yvwfs"
       },
       "source": [
         ""
